--- a/frontend/src/styles/PhotoDetailsModal.scss
+++ b/frontend/src/styles/PhotoDetailsModal.scss
@@ -6,11 +6,13 @@
   left: 50%;
   transform: translate(-50%, -40%);
   height: 80%;
-  width: 55%;
+  width: 73%;
   overflow-y: scroll;
   border-radius: 12px;
 }
-
+.photo-details-modal::-webkit-scrollbar{
+  width: 0;
+}
 .photo-details-modal__close-button {
   background-color: white;
   border: none;
@@ -20,18 +22,19 @@
   display: inline-block;
   font-size: 16px;
   cursor: pointer;
-  margin-left: 16px;
-  margin-top: 16px;
+  margin-left: 6px;
+  margin-top: 6px;
+  padding: 0;
 }
 
 .photo-details-modal__images {
-  margin-left: 36px;
-  margin-top: 8px;
+  padding: 30px;
+  padding-top: 0;
 }
 
 .photo-details-modal__image {
-  max-width: 95%;
-  border-radius: 8px;
+  max-width: 100%;
+  border-radius: 0;
 }
 
 .photo-details-modal__top-bar {
@@ -46,32 +49,35 @@
 .photo-details-modal__photographer-details {
   display: flex;
   font-size: 16px;
+  margin-top: 12px;
+  align-items: center;
 }
 
 .photo-details-modal__header {
   font-size: 18px;
   font-weight: 500;
-  color: #1e1e1e;
+  color: #010101;
   margin-top: 24px;
   margin-bottom: 24px;
-  width: 90%;
+  width: 100%;
+  border-top: 1px solid #ddd;
+  padding-top: 24px;
 }
 
 .photo-details-modal__photographer-location {
   color: #838383;
+  font-weight: 400;
 }
 .photo-details-modal__photographer-profile {
   object-fit: cover;
   border-radius: 100%;
   vertical-align: middle;
-  margin-right: 8px;
+  margin-right: 12px;
   width: 40px;
   height: 40px;
 }
 
 .photo-details-modal__photographer-info {
-  margin-top: 5px;
   font-weight: 700;
   font-size: 12px;
-  margin-left: 8px;
 }
