--- a/frontend/src/styles/PhotoListItem.scss
+++ b/frontend/src/styles/PhotoListItem.scss
@@ -1,11 +1,13 @@
 .photo-list__item {
-  margin: 24px;
-  padding: 8px;
-  border-width: 0.5px;
-  border-color: lightgray;
+  padding: 1rem;
+  border-width: 1px;
+  border-color: #dfdbdb;
   border-style: solid;
   border-radius: 8px;
+  background-color: #ffffff;
   max-width: fit-content;
+  position: relative;
+
 }
 
 .photo-list__image {
@@ -27,22 +29,23 @@
   object-fit: cover;
   border-radius: 100%;
   vertical-align: middle;
-  margin-right: 8px;
+  margin-right: 12px;
   width: 40px;
   height: 40px;
 }
 
 .photo-list__user-details {
   display: flex;
+  align-items: center;
+  margin-top: 12px;
 }
 
 .photo-list__user-info {
-  margin-top: 5px;
   font-weight: 700;
   font-size: 12px;
-  margin-left: 8px;
 }
 
 .photo-list__user-location {
   color: #838383;
+  font-weight: 400;
 }
