--- a/frontend/src/styles/TopNavigationBar.scss
+++ b/frontend/src/styles/TopNavigationBar.scss
@@ -3,18 +3,20 @@
   flex-direction: row;
   justify-content: space-between;
   padding: 8px;
+  padding-left: 30px;
+  padding-right: 30px;
   align-items: center;
   -webkit-box-shadow: 0 4px 6px -6px #222;
   -moz-box-shadow: 0 4px 6px -6px #222;
   box-shadow: 0 4px 6px -6px #222;
   height: 72px;
+  background-color: #ffffff;
 }
 
 .top-nav-bar__logo {
   text-decoration: overline;
   font-weight: 500;
   font-size: 24px;
-  color: #111;
+  color: #010101;
   text-underline-position: auto;
-  margin-left: 24px;
 }
