--- a/frontend/src/styles/TopicListItem.scss
+++ b/frontend/src/styles/TopicListItem.scss
@@ -1,3 +1,6 @@
+.top-nav-bar__menu-items{
+  display: flex;
+}
 .topic-list__item {
   line-height: 24px;
   margin-left: 24px;
@@ -7,10 +10,13 @@
   font-size: 18px;
   text-decoration: none;
   font-weight: 500;
-  color: #2b2b2b;
+  color: #010101;
+  transition: all 0.3s linear;
 
   &:hover {
-    text-decoration: overline;
-    color: #111;
+    text-decoration: underline;
+    text-decoration-thickness: 2px;
+    color: #c80000;
+    text-underline-offset: 8px;
   }
 }
