--- a/frontend/src/styles/PhotoListItem.scss
+++ b/frontend/src/styles/PhotoListItem.scss
@@ -6,15 +6,15 @@
   border-radius: 8px;
   background-color: #ffffff;
   max-width: fit-content;
-  position: relative;
-
+  position: relative;   
 }
 
 .photo-list__image {
   user-select: none;
   width: 300px;
   height: 200px;
-  object-fit: cover;
+  object-fit: cover; 
+  cursor: pointer;
 }
 
 .photo-list__image {
