--- a/frontend/src/styles/TopicListItem.scss
+++ b/frontend/src/styles/TopicListItem.scss
@@ -3,7 +3,8 @@
 }
 .topic-list__item {
   line-height: 24px;
-  margin-left: 24px;
+  margin-left: 24px;    
+  cursor: pointer;
 }
 
 .topic-list__item span {
