--- a/frontend/src/styles/TopNavigationBar.scss
+++ b/frontend/src/styles/TopNavigationBar.scss
@@ -25,3 +25,10 @@
   color: #010101;
   text-underline-position: auto;
 }
+
+.dark .top-nav-bar {
+  background-color: #1e1e1e;
+}
+.dark .top-nav-bar__logo {
+  color: #ffffff;
+}
