--- a/frontend/src/App.scss
+++ b/frontend/src/App.scss
@@ -2,18 +2,19 @@
   background-color: #F5F5F5;
   padding-top: 80px;
 }
-
+.dark .App{
+  background-color: #010101;    
+  color: #fff;
+}
 .App-logo {
   height: 40vmin;
   pointer-events: none;
 }
-
 @media (prefers-reduced-motion: no-preference) {
   .App-logo {
     animation: App-logo-spin infinite 20s linear;
   }
 }
-
 .App-header {
   background-color: #282c34;
   min-height: 100vh;
@@ -24,7 +25,6 @@
   font-size: calc(10px + 2vmin);
   color: white;
 }
-
 .App-link {
   color: #61dafb;
 }
