--- a/frontend/src/styles/TopicListItem.scss
+++ b/frontend/src/styles/TopicListItem.scss
@@ -6,7 +6,9 @@
   margin-left: 24px;    
   cursor: pointer;
 }
-
+.dark .topic-list__item span {
+  color: #ffffff;
+}
 .topic-list__item span {
   font-size: 18px;
   text-decoration: none;
